// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background Overlay Active overlay 1`] = `
.c1 {
  background-color: #001833;
  color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c2 {
  display: block;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0.3;
  z-index: 200;
  cursor: pointer;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 c2"
      color="background.darkest"
      data-testid="__pcln-popover_Overlay"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Background Overlay Inactive overlay 1`] = `
.c1 {
  background-color: #001833;
  color: #fff;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c2 {
  display: block;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  z-index: 200;
  cursor: pointer;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 c2"
      color="background.darkest"
      data-testid="__pcln-popover_Overlay"
      tabindex="-1"
    />
  </div>
</div>
`;
